# lab_paoo

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/DataProcessor/: CMakeLists.txt  DataProcessor.cpp  DataProcessor.h
src/WeatherData/: CMakeLists.txt  IWeatherData.h  WeatherData.cpp  WeatherData.h  WeatherDataWind.cpp  WeatherDataWind.h
src/WeatherSensor/: CMakeLists.txt  IWeatherSensor.h  PressureSensor.cpp  PressureSensor.h  TemperatureSensor.cpp  TemperatureSensor.h  WeatherSensor.cpp  WeatherSensor.h
src/WeatherStation/: CMakeLists.txt  WeatherStation.cpp  WeatherStation.h
